5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/3113/executions/1831_1647.log
== TEST (2019-06-13 16:07:07) 
-- CODE:
from numpy import*
a=array(eval(input("")))

d=0

for i in range(size(a)):
	if(a[i]>=70):
		d=d+1
vet=zeros(d,dtype=int)
print(vet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:07:25) 
-- CODE:
from numpy import*
a=array(eval(input("")))

d=0

for i in range(size(a)):
	if(a[i]>=70):
		d=d+1
vet=zeros(d,dtype=int)
print(vet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:09:03) 
-- CODE:
from numpy import*
a=array(eval(input("")))

d=0
a=0
for i in range(size(a)):
	if(a[i]>=70):
		d=d+1
vet=zeros(d,dtype=int)
print(vet)
for i in range(size(a)):
	if(a[i]>=70):
		a=a+1
		b[a]=b[a]+i
print(a)
print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:09:24) 
-- CODE:
from numpy import*
a=array(eval(input("")))

d=0
s=0
for i in range(size(a)):
	if(a[i]>=70):
		d=d+1
vet=zeros(d,dtype=int)
print(vet)
for i in range(size(a)):
	if(a[i]>=70):
		s=s+1
		b[s]=b[s]+i
print(s)
print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:09:33) 
-- CODE:
from numpy import*
a=array(eval(input("")))

b=0
s=0
for i in range(size(a)):
	if(a[i]>=70):
		d=d+1
vet=zeros(d,dtype=int)
print(vet)
for i in range(size(a)):
	if(a[i]>=70):
		s=s+1
		b[s]=b[s]+i
print(s)
print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:09:41) 
-- CODE:
from numpy import*
a=array(eval(input("")))

b=0
s=0
for i in range(size(a)):
	if(a[i]>=70):
		d=d+1
vet=zeros(d,dtype=int)
print(vet)
for i in range(size(a)):
	if(a[i]>=70):
		s=s+1
		b[s]=b[s]+i
print(s)
print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:10:08) 
-- CODE:
from numpy import*
a=array(eval(input("")))

d=0
s=0
for i in range(size(a)):
	if(a[i]>=70):
		d=d+1
vet=zeros(d,dtype=int)
print(vet)
for i in range(size(a)):
	if(a[i]>=70):
		s=s+1
		d[s]=d[s]+i
print(s)
print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:10:10) 
-- CODE:
from numpy import*
a=array(eval(input("")))

d=0
s=0
for i in range(size(a)):
	if(a[i]>=70):
		d=d+1
vet=zeros(d,dtype=int)
print(vet)
for i in range(size(a)):
	if(a[i]>=70):
		s=s+1
		d[s]=d[s]+i
print(s)
print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:10:22) 
-- CODE:
from numpy import*
a=array(eval(input("")))

d=0
s=0
for i in range(size(a)):
	if(a[i]>=70):
		d=d+1
vet=zeros(d,dtype=int)
print(vet)
for i in range(size(a)):
	if(a[i]>=70):
		s=s+1
		d[s]=d[s]+s
print(s)
print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:11:22) 
-- CODE:
from numpy import*
a=array(eval(input("")))

d=0
s=0
for i in range(size(a)):
	if(a[i]>=70):
		d=d+1
vet=zeros(d,dtype=int)
for i in range(size(a)):
	if(a[i]>=70):
		s=s+1
print(s)
print(range(vet))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:11:41) 
-- CODE:
from numpy import*
a=array(eval(input("")))

d=0
s=0
for i in range(size(a)):
	if(a[i]>=70):
		d=d+1
vet=zeros(d,dtype=int)
for i in range(size(a)):
	if(a[i]>=70):
		s=s+1
		vet[s]=vet[s]+s
print(s)
print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:11:46) 
-- CODE:
from numpy import*
a=array(eval(input("")))

d=0
s=0
for i in range(size(a)):
	if(a[i]>=70):
		d=d+1
vet=zeros(d,dtype=int)
for i in range(size(a)):
	if(a[i]>=70):
		s=s+1
		vet[s]=vet[s]
print(s)
print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:11:52) 
-- CODE:
from numpy import*
a=array(eval(input("")))

d=0
s=0
for i in range(size(a)):
	if(a[i]>=70):
		d=d+1
vet=zeros(d,dtype=int)
for i in range(size(a)):
	if(a[i]>=70):
		s=s+1
		vet[s]=vet[s]
print(s)
print(vet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:11:57) 
-- CODE:
from numpy import*
a=array(eval(input("")))

d=0
s=0
for i in range(size(a)):
	if(a[i]>=70):
		d=d+1
vet=zeros(d,dtype=int)
for i in range(size(a)):
	if(a[i]>=70):
		s=s+1

print(s)
print(vet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 16:12:06) 
-- CODE:
from numpy import*
a=array(eval(input("")))

d=0
s=0
for i in range(size(a)):
	if(a[i]>=70):
		d=d+1
vet=zeros(d,dtype=int)
for i in range(size(a)):
	if(a[i]>=70):
		s=s+1

print(s)
print(vet)
-- EXECUTION TIME:
0.912965
-- TEST CASE 1:
---- input:
[20,35,70,75,45,85]
---- correct output:
3
[2 3 5]
---- user output:
3
[0 0 0]
-- TEST CASE 2:
---- input:
[70,65,35,70,75,45,85]
---- correct output:
4
[0 3 4 6]
---- user output:
4
[0 0 0 0]
-- TEST CASE 3:
---- input:
[70,65,35]
---- correct output:
1
[0]
---- user output:
1
[0]
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:13:34) 
-- CODE:
from numpy import*
a=array(eval(input("")))

d=0
s=0
for i in range(size(a)):
	if(a[i]>=70):
		d=d+1
vet=zeros(d,dtype=int)
for i in range(size(a)):
	if(a[i]>=70):
		s=s+1
		if(a[i]>=70):
			vet=vet+1
array(vet)
print(s)
print(vet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:13:46) 
-- CODE:
from numpy import*
a=array(eval(input("")))

d=0
s=0
for i in range(size(a)):
	if(a[i]>=70):
		d=d+1
vet=zeros(d,dtype=int)
for i in range(size(a)):
	if(a[i]>=70):
		s=s+1
		if(a[i]>=70):
			vet=vet+1

print(s)
print(array(vet))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:13:55) 
-- CODE:
from numpy import*
a=array(eval(input("")))

d=0
s=0
for i in range(size(a)):
	if(a[i]>=70):
		d=d+1
vet=zeros(d,dtype=int)
for i in range(size(a)):
	if(a[i]>=70):
		s=s+1
		if(a[i]>=70):
			vet=vet+i

print(s)
print(array(vet))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 16:14:00) 
-- CODE:
from numpy import*
a=array(eval(input("")))

d=0
s=0
for i in range(size(a)):
	if(a[i]>=70):
		d=d+1
vet=zeros(d,dtype=int)
for i in range(size(a)):
	if(a[i]>=70):
		s=s+1
		if(a[i]>=70):
			vet=vet+i

print(s)
print(array(vet))
-- EXECUTION TIME:
0.926293
-- TEST CASE 1:
---- input:
[20,35,70,75,45,85]
---- correct output:
3
[2 3 5]
---- user output:
3
[10 10 10]
-- TEST CASE 2:
---- input:
[70,65,35,70,75,45,85]
---- correct output:
4
[0 3 4 6]
---- user output:
4
[13 13 13 13]
-- TEST CASE 3:
---- input:
[70,65,35]
---- correct output:
1
[0]
---- user output:
1
[0]
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:14:04) 
-- CODE:
from numpy import*
a=array(eval(input("")))

d=0
s=0
for i in range(size(a)):
	if(a[i]>=70):
		d=d+1
vet=zeros(d,dtype=int)
for i in range(size(a)):
	if(a[i]>=70):
		s=s+1
		if(a[i]>=70):
			vet=vet+i

print(s)
print(array(vet))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:14:45) 
-- CODE:
from numpy import*
a=array(eval(input("")))

d=0
s=0
for i in range(size(a)):
	if(a[i]>=70):
		d=d+1
vet=zeros(d,dtype=int)
for i in range(size(a)):
	if(a[i]>=70):
		s=s+1
		vet[i]=vet[i]+i

print(s)
print(array(vet))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:15:30) 
-- CODE:
from numpy import*
a=array(eval(input("")))

d=0
s=0
for i in range(size(a)):
	if(a[i]>=70):
		d=d+1
vet=zeros(d,dtype=int)
for i in range(size(a)):
	if(a[i]>=70):
		s=s+1
range(vet)

print(s)
print(array(vet))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:15:59) 
-- CODE:
from numpy import*
a=array(eval(input("")))

d=0
s=0
for i in range(size(a)):
	if(a[i]>=70):
		d=d+1
vet=zeros(d,dtype=int)
for i in range(size(a)):
	if(a[i]>=70):
		s=s+1
size(vet)

print(s)
print(array(vet))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:16:17) 
-- CODE:
from numpy import*
a=array(eval(input("")))

d=0
s=0
for i in range(size(a)):
	if(a[i]>=70):
		d=d+1
vet=zeros(d,dtype=int)
for i in range(size(a)):
	if(a[i]>=70):
		s=s+1
size(vet)

print(s)
print(vet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:16:43) 
-- CODE:
from numpy import*
a=array(eval(input("")))

d=0
s=0
for i in range(size(a)):
	if(a[i]>=70):
		d=d+1
vet=zeros(d,dtype=int)
for i in range(size(a)):
	if(a[i]>=70):
		s=s+1
vet=size(vet)

print(s)
print(vet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 16:16:51) 
-- CODE:
from numpy import*
a=array(eval(input("")))

d=0
s=0
for i in range(size(a)):
	if(a[i]>=70):
		d=d+1
vet=zeros(d,dtype=int)
for i in range(size(a)):
	if(a[i]>=70):
		s=s+1
vet=size(vet)

print(s)
print(vet)
-- EXECUTION TIME:
0.86825
-- TEST CASE 1:
---- input:
[20,35,70,75,45,85]
---- correct output:
3
[2 3 5]
---- user output:
3
3
-- TEST CASE 2:
---- input:
[70,65,35,70,75,45,85]
---- correct output:
4
[0 3 4 6]
---- user output:
4
4
-- TEST CASE 3:
---- input:
[70,65,35]
---- correct output:
1
[0]
---- user output:
1
1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:17:09) 
-- CODE:
from numpy import*
a=array(eval(input("")))

d=0
s=0
for i in range(size(a)):
	if(a[i]>=70):
		d=d+1
vet=zeros(d,dtype=int)
for i in range(size(a)):
	if(a[i]>=70):
		s=s+1
vet=range(vet)

print(s)
print(vet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:17:15) 
-- CODE:
from numpy import*
a=array(eval(input("")))

d=0
s=0
for i in range(size(a)):
	if(a[i]>=70):
		d=d+1
vet=zeros(d,dtype=int)
for i in range(size(a)):
	if(a[i]>=70):
		s=s+1
vet=array(vet)

print(s)
print(vet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:17:24) 
-- CODE:
from numpy import*
a=array(eval(input("")))

d=0
s=0
for i in range(size(a)):
	if(a[i]>=70):
		d=d+1
vet=zeros(d,dtype=int)
for i in range(size(a)):
	if(a[i]>=70):
		s=s+1
vet=array(size(vet))

print(s)
print(vet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:21:20) 
-- CODE:
from numpy import*
a=array(eval(input("")))

d=0
s=0
for i in range(size(a)):
	if(a[i]>=70):
		d=d+1
vet=zeros(d,dtype=int)
for i in range(size(a)):
	if(a[i]>=70):
		s=s+1
		vet[i]=i


print(s)
print(vet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 16:21:35) 
-- CODE:
from numpy import*
a=array(eval(input("")))

d=0
s=0
for i in range(size(a)):
	if(a[i]>=70):
		d=d+1
vet=zeros(d,dtype=int)
for i in range(size(a)):
	if(a[i]>=70):
		s=s+1
		vet[i]=i


print(s)
print(vet)
-- EXECUTION TIME:
0.986456
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1831/1647/main.py", line 13, in <module>
    vet[i]=i
IndexError: index 3 is out of bounds for axis 0 with size 3

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:21:42) 
-- CODE:
from numpy import*
a=array(eval(input("")))

d=0
s=0
for i in range(size(a)):
	if(a[i]>=70):
		d=d+1
vet=zeros(d,dtype=int)
for i in range(size(a)):
	if(a[i]>=70):
		s=s+1
		vet[i]=i


print(s)
print(vet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:23:10) 
-- CODE:
from numpy import*
a=array(eval(input("")))

d=0
s=0
for i in range(size(a)):
	if(a[i]>=70):
		d=d+1
vet=zeros(d,dtype=int)
for i in range(size(a)):
	if(a[i]>=70):
		s=s+1
		vet[d]=


print(s)
print(vet)
-- ERROR:
File "XXXX", line 13
    vet[d]=
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:23:19) 
-- CODE:
from numpy import*
a=array(eval(input("")))

d=0
s=0
for i in range(size(a)):
	if(a[i]>=70):
		d=d+1
vet=zeros(d,dtype=int)
for i in range(size(a)):
	if(a[i]>=70):
		s=s+1
		vet[i]=d


print(s)
print(vet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 16:23:24) 
-- CODE:
from numpy import*
a=array(eval(input("")))

d=0
s=0
for i in range(size(a)):
	if(a[i]>=70):
		d=d+1
vet=zeros(d,dtype=int)
for i in range(size(a)):
	if(a[i]>=70):
		s=s+1
		vet[i]=d


print(s)
print(vet)
-- EXECUTION TIME:
1.02879
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1831/1647/main.py", line 13, in <module>
    vet[i]=d
IndexError: index 3 is out of bounds for axis 0 with size 3

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:23:25) 
-- CODE:
from numpy import*
a=array(eval(input("")))

d=0
s=0
for i in range(size(a)):
	if(a[i]>=70):
		d=d+1
vet=zeros(d,dtype=int)
for i in range(size(a)):
	if(a[i]>=70):
		s=s+1
		vet[i]=d


print(s)
print(vet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:23:31) 
-- CODE:
from numpy import*
a=array(eval(input("")))

d=0
s=0
for i in range(size(a)):
	if(a[i]>=70):
		d=d+1
vet=zeros(d,dtype=int)
for i in range(size(a)):
	if(a[i]>=70):
		s=s+1
		vet[i]=d-1


print(s)
print(vet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:26:29) 
-- CODE:
from numpy import*
a=array(eval(input("")))

d=0
s=0
for i in range(size(a)):
	if(a[i]>=70):
		d=d+1
vet=zeros(d,dtype=int)
for i in range(size(a)):
	if(a[i]>=70):
		s=s+1



print(s)
print(arange(vet))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:32:07) 
-- CODE:
from numpy import*
a=array(eval(input("")))

d=0
s=0
j=0
for i in range(size(a)):
	if(a[i]>=70):
		d=d+1
vet=zeros(d,dtype=int)
for i in range(size(a)):
	if(a[i]>=70):
		s=s+1
		j[i]=j[i]
		vet[i]=j[i]


print(s)
print(arange(vet))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:32:22) 
-- CODE:
from numpy import*
a=array(eval(input("")))

d=0
s=0
j=0
for i in range(size(a)):
	if(a[i]>=70):
		d=d+1
vet=zeros(d,dtype=int)
for i in range(size(a)):
	if(a[i]>=70):
		s=s+1
		j[i]=j[i]
		vet[i]=j[i]


print(s)
print(vet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:34:01) 
-- CODE:
from numpy import*
a=array(eval(input("")))

d=0
s=0
j=0
for i in range(size(a)):
	if(a[i]>=70):
		d=d+1
vet=zeros(d,dtype=int)
for i in range(size(a)):
	if(a[i]>=70):
		s=s+1
		
		vet[i]=j[i]


print(s)
print(vet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 16:36:49) 
-- CODE:
from numpy import*
a=array(eval(input("")))

d=0
s=0
j=0
for i in range(size(a)):
	if(a[i]>=70):
		d=d+1
vet=zeros(d,dtype=int)
for i in range(size(a)):
	if(a[i]>=70):
		s=s+1
		


print(s)
print(vet)
-- EXECUTION TIME:
0.850068
-- TEST CASE 1:
---- input:
[20,35,70,75,45,85]
---- correct output:
3
[2 3 5]
---- user output:
3
[0 0 0]
-- TEST CASE 2:
---- input:
[70,65,35,70,75,45,85]
---- correct output:
4
[0 3 4 6]
---- user output:
4
[0 0 0 0]
-- TEST CASE 3:
---- input:
[70,65,35]
---- correct output:
1
[0]
---- user output:
1
[0]
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:38:11) 
-- CODE:
from numpy import*
a=array(eval(input("")))

d=0
s=0
j=0
for i in range(size(a)):
	if(a[i]>=70):
		d=d+1
vet=zeros(d,dtype=int)
for i in range(size(a)):
	if(a[i]>=70):
		s=s+1
		j=vet[i]


print(s)
print(j)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:38:21) 
-- CODE:
from numpy import*
a=array(eval(input("")))

d=0
s=0
j=0
for i in range(size(a)):
	if(a[i]>=70):
		d=d+1
vet=zeros(d,dtype=int)
for i in range(size(a)):
	if(a[i]>=70):
		s=s+1
		j=vet[i]


print(s)
print(j)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:38:31) 
-- CODE:
from numpy import*
a=array(eval(input("")))

d=0
s=0
j=0
for i in range(size(a)):
	if(a[i]>=70):
		d=d+1
vet=zeros(d,dtype=int)
for i in range(size(a)):
	if(a[i]>=70):
		s=s+1
		j=j+vet[i]


print(s)
print(j)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:39:19) 
-- CODE:
from numpy import*
a=array(eval(input("")))

d=0
s=0
j=0
for i in range(size(a)):
	if(a[i]>=70):
		d=d+1
vet=zeros(d,dtype=int)
for i in range(size(a)):
	if(a[i]>=70):
		s=s+1
		vet[i]=i


print(s)
print(j)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:39:28) 
-- CODE:
from numpy import*
a=array(eval(input("")))

d=0
s=0
j=0
for i in range(size(a)):
	if(a[i]>=70):
		d=d+1
vet=zeros(d,dtype=int)
for i in range(size(a)):
	if(a[i]>=70):
		s=s+1
		vet[i]=i


print(s)
print(vet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:39:39) 
-- CODE:
from numpy import*
a=array(eval(input("")))

d=0
s=0
j=0
for i in range(size(a)):
	if(a[i]>=70):
		d=d+1
vet=zeros(d,dtype=int)
for i in range(size(a)):
	if(a[i]>=70):
		s=s+1
		vet[s]=s


print(s)
print(vet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:40:30) 
-- CODE:
from numpy import*
a=array(eval(input("")))

d=0
s=0
j=0
for i in range(size(a)):
	if(a[i]>=70):
		d=d+1
vet=zeros(d,dtype=int)
for i in range(size(a)):
	if(a[i]>=70):
		s=s+1
		vet[i]=pos(i)


print(s)
print(vet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:40:41) 
-- CODE:
from numpy import*
a=array(eval(input("")))

d=0
s=0
j=0
for i in range(size(a)):
	if(a[i]>=70):
		d=d+1
vet=zeros(d,dtype=int)
for i in range(size(a)):
	if(a[i]>=70):
		s=s+1
		vet[i]=arange(i)


print(s)
print(vet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:40:47) 
-- CODE:
from numpy import*
a=array(eval(input("")))

d=0
s=0
j=0
for i in range(size(a)):
	if(a[i]>=70):
		d=d+1
vet=zeros(d,dtype=int)
for i in range(size(a)):
	if(a[i]>=70):
		s=s+1
		vet[i]=


print(s)
print(vet)
-- ERROR:
File "XXXX", line 14
    vet[i]=
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:41:08) 
-- CODE:
from numpy import*
a=array(eval(input("")))

d=0
s=0
j=0
for i in range(size(a)):
	if(a[i]>=70):
		d=d+1
vet=zeros(d,dtype=int)
q=vet
for i in range(size(a)):
	if(a[i]>=70):
		s=s+1
		vet[i]=


print(s)
print(q)
-- ERROR:
File "XXXX", line 15
    vet[i]=
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:41:13) 
-- CODE:
from numpy import*
a=array(eval(input("")))

d=0
s=0
j=0
for i in range(size(a)):
	if(a[i]>=70):
		d=d+1
vet=zeros(d,dtype=int)
q=vet
for i in range(size(a)):
	if(a[i]>=70):
		s=s+1


print(s)
print(q)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:41:58) 
-- CODE:
from numpy import*
a=array(eval(input("")))

d=0
s=0
j=0
for i in range(size(a)):
	if(a[i]>=70):
		d=d+1
vet=zeros(d,dtype=int)
q=vet
for i in range(size(a)):
	if(a[i]>=70):
		s=s+1
		d[a]=a[i]

print(s)
print(q)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:42:01) 
-- CODE:
from numpy import*
a=array(eval(input("")))

d=0
s=0
j=0
for i in range(size(a)):
	if(a[i]>=70):
		d=d+1
vet=zeros(d,dtype=int)
q=vet
for i in range(size(a)):
	if(a[i]>=70):
		s=s+1
		q[a]=a[i]

print(s)
print(q)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:43:53) 
-- CODE:
from numpy import*
a=array(eval(input("")))

d=0
s=0
j=0
for i in range(size(a)):
	if(a[i]>=70):
		d=d+1
vet=zeros(d,dtype=int)
for i in range(size(a)):
	if(a[i]>=70):
		s=s+1
	

print(s)
print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 16:43:59) 
-- CODE:
from numpy import*
a=array(eval(input("")))

d=0
s=0
j=0
for i in range(size(a)):
	if(a[i]>=70):
		d=d+1
vet=zeros(d,dtype=int)
for i in range(size(a)):
	if(a[i]>=70):
		s=s+1
	

print(s)
print(d)
-- EXECUTION TIME:
1.07808
-- TEST CASE 1:
---- input:
[20,35,70,75,45,85]
---- correct output:
3
[2 3 5]
---- user output:
3
3
-- TEST CASE 2:
---- input:
[70,65,35,70,75,45,85]
---- correct output:
4
[0 3 4 6]
---- user output:
4
4
-- TEST CASE 3:
---- input:
[70,65,35]
---- correct output:
1
[0]
---- user output:
1
1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:44:03) 
-- CODE:
from numpy import*
a=array(eval(input("")))

d=0
s=0
j=0
for i in range(size(a)):
	if(a[i]>=70):
		d=d+1
vet=zeros(d,dtype=int)
for i in range(size(a)):
	if(a[i]>=70):
		s=s+1
	

print(s)
print(vet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:44:10) 
-- CODE:
from numpy import*
a=array(eval(input("")))

d=0
s=0
j=0
for i in range(size(a)):
	if(a[i]>=70):
		d=d+1
vet=range(d,dtype=int)
for i in range(size(a)):
	if(a[i]>=70):
		s=s+1
	

print(s)
print(vet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:44:16) 
-- CODE:
from numpy import*
a=array(eval(input("")))

d=0
s=0
j=0
for i in range(size(a)):
	if(a[i]>=70):
		d=d+1
vet=array(d,dtype=int)
for i in range(size(a)):
	if(a[i]>=70):
		s=s+1
	

print(s)
print(vet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:44:32) 
-- CODE:
from numpy import*
a=array(eval(input("")))

d=0
s=0
j=0
for i in range(size(a)):
	if(a[i]>=70):
		d=d+1
vet=samply(d,dtype=int)
for i in range(size(a)):
	if(a[i]>=70):
		s=s+1
	

print(s)
print(vet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:45:51) 
-- CODE:
from numpy import*
a=array(eval(input("")))

d=0
s=0
j=0
for i in range(size(a)):
	if(a[i]>=70):
		d=d+1
vet=zeros(d,dtype=int)
for i in range(size(a)):
	if(a[i]>=70):
		s=s+1
		

print(s)
print(vet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 16:45:55) 
-- CODE:
from numpy import*
a=array(eval(input("")))

d=0
s=0
j=0
for i in range(size(a)):
	if(a[i]>=70):
		d=d+1
vet=zeros(d,dtype=int)
for i in range(size(a)):
	if(a[i]>=70):
		s=s+1
		

print(s)
print(vet)
-- EXECUTION TIME:
0.924802
-- TEST CASE 1:
---- input:
[20,35,70,75,45,85]
---- correct output:
3
[2 3 5]
---- user output:
3
[0 0 0]
-- TEST CASE 2:
---- input:
[70,65,35,70,75,45,85]
---- correct output:
4
[0 3 4 6]
---- user output:
4
[0 0 0 0]
-- TEST CASE 3:
---- input:
[70,65,35]
---- correct output:
1
[0]
---- user output:
1
[0]
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:47:56) 
-- CODE:
from numpy import*
a=array(eval(input("")))

d=0
s=0
j=0
for i in range(size(a)):
	if(a[i]>=70):
		d=d+1
vet=zeros(d,dtype=int)
for i in range(size(a)):
	if(a[i]>=70):
		s=s+1
		vet[i]=size(a[i])

print(s)
print(vet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:48:18) 
-- CODE:
from numpy import*
a=array(eval(input("")))

d=0
s=0
j=0
for i in range(size(a)):
	if(a[i]>=70):
		d=d+1
vet=zeros(d,dtype=int)
for i in range(size(a)):
	if(a[i]>=70):
		s=s+1
		vet[i]=size(a[i])
		j=vet

print(s)
print(j)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:48:23) 
-- CODE:
from numpy import*
a=array(eval(input("")))

d=0
s=0
j=0
for i in range(size(a)):
	if(a[i]>=70):
		d=d+1
vet=zeros(d,dtype=int)
for i in range(size(a)):
	if(a[i]>=70):
		s=s+1
		vet[i]=size(a)
		j=vet

print(s)
print(j)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:48:37) 
-- CODE:
from numpy import*
a=array(eval(input("")))

d=0
s=0
j=0
for i in range(size(a)):
	if(a[i]>=70):
		d=d+1
vet=zeros(d,dtype=int)
for i in range(size(a)):
	if(a[i]>=70):
		s=s+1
		vet[i]=vet[i]+size(a)
		j=vet

print(s)
print(j)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 16:48:47) 
-- CODE:
from numpy import*
a=array(eval(input("")))

d=0
s=0
j=0
for i in range(size(a)):
	if(a[i]>=70):
		d=d+1
vet=zeros(d,dtype=int)
for i in range(size(a)):
	if(a[i]>=70):
		s=s+1
		vet[i]=size(a[i])
		j=vet

print(s)
print(vet)
-- EXECUTION TIME:
0.730564
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1831/1647/main.py", line 14, in <module>
    vet[i]=size(a[i])
IndexError: index 3 is out of bounds for axis 0 with size 3

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:48:48) 
-- CODE:
from numpy import*
a=array(eval(input("")))

d=0
s=0
j=0
for i in range(size(a)):
	if(a[i]>=70):
		d=d+1
vet=zeros(d,dtype=int)
for i in range(size(a)):
	if(a[i]>=70):
		s=s+1
		vet[i]=size(a[i])
		j=vet

print(s)
print(vet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 16:49:03) 
-- CODE:
from numpy import*
a=array(eval(input("")))

d=0
s=0
j=0
for i in range(size(a)):
	if(a[i]>=70):
		d=d+1
vet=zeros(d,dtype=int)
for i in range(size(a)):
	if(a[i]>=70):
		s=s+1
		

print(s)
print(vet)
-- EXECUTION TIME:
0.874525
-- TEST CASE 1:
---- input:
[20,35,70,75,45,85]
---- correct output:
3
[2 3 5]
---- user output:
3
[0 0 0]
-- TEST CASE 2:
---- input:
[70,65,35,70,75,45,85]
---- correct output:
4
[0 3 4 6]
---- user output:
4
[0 0 0 0]
-- TEST CASE 3:
---- input:
[70,65,35]
---- correct output:
1
[0]
---- user output:
1
[0]
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 16:49:42) 
-- CODE:
from numpy import*
a=array(eval(input("")))

d=0
s=0
j=0
for i in range(size(a)):
	if(a[i]>=70):
		d=d+1
vet=zeros(d,dtype=int)
for i in range(size(a)):
	if(a[i]>=70):
		s=s+1
		

print(s)

-- EXECUTION TIME:
0.844428
-- TEST CASE 1:
---- input:
[20,35,70,75,45,85]
---- correct output:
3
[2 3 5]
---- user output:
3
-- TEST CASE 2:
---- input:
[70,65,35,70,75,45,85]
---- correct output:
4
[0 3 4 6]
---- user output:
4
-- TEST CASE 3:
---- input:
[70,65,35]
---- correct output:
1
[0]
---- user output:
1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 16:49:46) 
-- CODE:
from numpy import*
a=array(eval(input("")))

d=0
s=0
j=0
for i in range(size(a)):
	if(a[i]>=70):
		d=d+1
vet=zeros(d,dtype=int)
for i in range(size(a)):
	if(a[i]>=70):
		s=s+1
		

print(s)
print(vet)
-- EXECUTION TIME:
0.782666
-- TEST CASE 1:
---- input:
[20,35,70,75,45,85]
---- correct output:
3
[2 3 5]
---- user output:
3
[0 0 0]
-- TEST CASE 2:
---- input:
[70,65,35,70,75,45,85]
---- correct output:
4
[0 3 4 6]
---- user output:
4
[0 0 0 0]
-- TEST CASE 3:
---- input:
[70,65,35]
---- correct output:
1
[0]
---- user output:
1
[0]
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:51:25) 
-- CODE:
from numpy import*
a=array(eval(input("")))

d=0
s=0
j=0
for i in range(size(a)):
	if(a[i]>=70):
		d=d+1
vet=zeros(d,dtype=int)
for i in range(size(a)):
	if(a[i]>=70):
		s=s+1
vet=(2)
print(s)
print(vet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 16:52:25) 
-- CODE:
from numpy import*
a=array(eval(input("")))

d=0
s=0
j=0
for i in range(size(a)):
	if(a[i]>=70):
		d=d+1
vet=zeros(d,dtype=int)
for i in range(size(a)):
	if(a[i]>=70):
		s=s+1

print(s)
print(vet)
-- EXECUTION TIME:
0.820592
-- TEST CASE 1:
---- input:
[20,35,70,75,45,85]
---- correct output:
3
[2 3 5]
---- user output:
3
[0 0 0]
-- TEST CASE 2:
---- input:
[70,65,35,70,75,45,85]
---- correct output:
4
[0 3 4 6]
---- user output:
4
[0 0 0 0]
-- TEST CASE 3:
---- input:
[70,65,35]
---- correct output:
1
[0]
---- user output:
1
[0]
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:54:47) 
-- CODE:
from numpy import*
a=array(eval(input("")))

d=0
s=0
j=0
for i in range(size(a)):
	if(a[i]>=70):
		d=d+1
vet=zeros(d,dtype=int)
for i in range(size(a)):
	if(a[i]>=70):
		s=s+1

print(s)
print(vet[i])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 16:55:00) 
-- CODE:
from numpy import*
a=array(eval(input("")))

d=0
s=0
j=0
for i in range(size(a)):
	if(a[i]>=70):
		d=d+1
vet=zeros(d,dtype=int)
for i in range(size(a)):
	if(a[i]>=70):
		s=s+1

print(s)
print(vet)
-- EXECUTION TIME:
0.946737
-- TEST CASE 1:
---- input:
[20,35,70,75,45,85]
---- correct output:
3
[2 3 5]
---- user output:
3
[0 0 0]
-- TEST CASE 2:
---- input:
[70,65,35,70,75,45,85]
---- correct output:
4
[0 3 4 6]
---- user output:
4
[0 0 0 0]
-- TEST CASE 3:
---- input:
[70,65,35]
---- correct output:
1
[0]
---- user output:
1
[0]
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
